--- a/.env
+++ b/.env
@@ -3,10 +3,11 @@ BD_USER=root
 BD_PASS=
 BD_HOST=localhost
 
-EMAIL_HOST=smtp.mailtrap.io
+EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
-EMAIL_USER=2afe1c934a3b7a
-EMAIL_PASS=a962d4af08028c
+EMAIL_USER=688a9b15d7e5d3
+EMAIL_PASS=bee37e11c0514e
 
 ##Backend
 BACKEND_URL=http://localhost
+
