--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "author": "David Silva C",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1402.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
