Fast Detalle de objetos

--- a/.env
+++ b/.env
@@ -13,4 +13,5 @@ BACKEND_URL=http://localhost
 ##Token
 JWT_SECRET=supersecreta
 ##ENDPOINT Validacion
-http://127.0.0.1:8000/validador
+VALIDA_URL=http://127.0.0.1:8000/validador
+PATH_DATA=fastapi/data/
